Aplicação do Kivy funcionando.
Monta o calendario
    - Mostra a data atual no calendario Dekatrian e no calendario Gregoriano

--- a/infra/view/telainicial.kv
+++ b/infra/view/telainicial.kv
@@ -1,108 +1,219 @@
-#:include infra/view/uix/labeldata.kv
+#:include infra/view/uix/areadata.kv
+#:include infra/view/uix/areatitulo.kv
 #:import C kivy.utils.get_color_from_hex
 
-<TelaInicial@BoxLayout>:      
+<TelaInicial@BoxLayout>:  
+    padding: 5    
     canvas:
         Color:            
-            rgb: C("#ECECEC")
+            rgb: C("#FFFFFF")
         Rectangle:
-            size: self.size  
-    orientation: "vertical"    
-    FloatLayout:
-        size_hint: 1, .2
-        Label:
-            pos_hint: {"right":1, "y":0}
-            text: "Dekatrian"   
-            color:  C("#000000")
-        
-    LabelData: 
+            size: self.size
+            pos: self.pos  
+    orientation: "vertical"  
+    AreaTitulo:        
+    AreaData: 
 
     StackLayout:
+        size_hint: 1, .3
+        padding: 2
+        spacing: 2
+        canvas:
+            Color:            
+                rgb: C("#3385ff")
+            Rectangle:
+                size: self.size
+                pos: self.pos  
         orientation: "lr-tb"
+        Label:
+            size_hint: .1428, .1
+            text:"Rubia"
+        Label:
+            size_hint: .1428, .1
+            text:"Auria"
+        Label:
+            size_hint: .1428, .1
+            text:"Flavia"
+        Label:
+            size_hint: .1428, .1
+            text:"Virdia"
+        Label:
+            size_hint: .1428, .1
+            text:"Coria"
+        Label:
+            size_hint: .1428, .1
+            text:"India"
+        Label:
+            size_hint: .1428, .1
+            text:"Violeta" 
+
         Button:
-            background_color: C("#000000")
+            color:  C("#001f4d")
+            background_color: C("#ffcccc")
             background_normal: ""   
             text:"1"
-            size_hint: .1428, .1
+            size_hint: .1428, .2
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"2"
-            size_hint: .1428, .1
+            size_hint: .1428, .2
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"3"
-            size_hint: .1428, .1     
+            size_hint: .1428, .2     
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"4"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2  
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"5"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"6"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2  
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"7"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#ffcccc")
+            background_normal: ""         
             text:"8"
-            size_hint: .1428, .1
+            size_hint: .1428, .2
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"9"
-            size_hint: .1428, .1
+            size_hint: .1428, .2
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"10"
-            size_hint: .1428, .1     
+            size_hint: .1428, .2     
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"11"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"12"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"13"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"14"
-            size_hint: .1428, .1  
+            size_hint: .1428, .2  
         Button:
+            color:  C("#001f4d")
+            background_color: C("#ffcccc")
+            background_normal: ""         
             text:"15"
-            size_hint: .1428, .1
+            size_hint: .1428, .2
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"16"
-            size_hint: .1428, .1
+            size_hint: .1428, .2
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"17"
-            size_hint: .1428, .1     
+            size_hint: .1428, .2    
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"18"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"19"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"20"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"21"
-            size_hint: .1428, .1  
+            size_hint: .1428, .2  
         Button:
+            color:  C("#001f4d")
+            background_color: C("#ffcccc")
+            background_normal: ""         
             text:"22"
-            size_hint: .1428, .1
+            size_hint: .1428, .2
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"23"
-            size_hint: .1428, .1
+            size_hint: .1428, .2
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"24"
-            size_hint: .1428, .1     
+            size_hint: .1428, .2    
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"25"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2  
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"26"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"27"
-            size_hint: .1428, .1   
+            size_hint: .1428, .2   
         Button:
+            color:  C("#001f4d")
+            background_color: C("#FFFFFF")
+            background_normal: ""         
             text:"28"
-            size_hint: .1428, .1                                      
-                                                                   
+            size_hint: .1428, .2                                      
+    BoxLayout:
+        size_hint: 1, .5                                                                
