Refatoramento de todo o projeto para apricação utiliazar arquivos .kv de uma forma mais orientada a objeto

--- a/infra/view/uix/areatitulo.kv
+++ b/infra/view/uix/areatitulo.kv
@@ -10,6 +10,6 @@
     Label:
         markup: True
         pos_hint: {"right":1, "top":1}
-        text:"[b]Dekatrian[/b]"
+        text:root.titulo
         color:  C("#FFFFFF")
         font_height: 20
