--- a/infra/view/kv/areadata.kv
+++ b/infra/view/kv/areadata.kv
@@ -24,6 +24,7 @@
             text: root.mes     
             color:  C("#001f4d") 
             background_normal: ""
+            on_press: root.on_press_dia
         Button:   
             id: ano              
             size_hint: None, 1   
