--- a/infra/view/kv/teladekatrian.kv
+++ b/infra/view/kv/teladekatrian.kv
@@ -23,7 +23,7 @@
             size_hint: 1, .1
             markup: True
             color: C("#000000")            
-            text: u"\nVisite a pagina da Deviante ou o grupo do facebook\ndo Calendario Dekatrian para saber mais."
+            text: u"\nVisite a pagina da Deviante ou o grupo do\nfacebook do Calendario Dekatrian para sabe\nmais."
             
         Label:
             size_hint: 1, .1
