App funcionando em um programa android

--- a/infra/view/kv/teladekatrian.kv
+++ b/infra/view/kv/teladekatrian.kv
@@ -4,7 +4,7 @@
 <TelaDekatrian>:    
     orientation: "vertical"   
     AreaMenu:  
-        size_hint: 1, .03       
+        size_hint: 1, .05       
     StackLayout:   
         size_hint: 1, .97           
         orientation: "lr-tb"
@@ -18,12 +18,12 @@
         Label:
             size_hint: 1, .2
             color: C("#000000")            
-            text: u"\nDekatrian e um calendario idealizado\npelo integrante da equipe do Podcast Scicast:\n\nRoberto Spinelli.\n"
+            text: u"\nDekatrian e um calendario idealizado\npelo integrante da equipe do podcast Scicast:\n\nRoberto Spinelli.\n"
         Label:
             size_hint: 1, .1
             markup: True
             color: C("#000000")            
-            text: u"\nVisite a pagina da Deviante ou o grupo do\nfacebook do Calendario Dekatrian para sabe\nmais."
+            text: u"\nVisite a pagina da Deviante ou o grupo do\nfacebook do Calendario Dekatrian para saber\nmais."
             
         Label:
             size_hint: 1, .1
