Melhorando Lógica de Mudança de Tela

--- a/infra/view/kv/areadata.kv
+++ b/infra/view/kv/areadata.kv
@@ -16,6 +16,7 @@
             text: root.dia
             color:  C("#001f4d") 
             background_normal: ""
+            on_press: root.on_press_dia()
 
         Button:     
             id: mes            
