--- a/infra/view/kv/areadata.kv
+++ b/infra/view/kv/areadata.kv
@@ -11,29 +11,36 @@
         padding: 2                    
         Button:
             id: dia
-            size_hint: None, 1
+            size_hint: .1, 1
             width:30
             text: root.dia
-            color:  C("#001f4d") 
+            bold: True 
+            color:  C("#FFFFFF")   
+            background_color:  C("#A9A9A9") 
             background_normal: ""
             on_press: root.on_press_dia()
 
         Button:     
             id: mes            
-            size_hint: None, 1  
+            size_hint: .4, 1  
             width:100  
             text: root.mes     
-            color:  C("#001f4d") 
+            bold: True 
+            color:  C("#FFFFFF")   
+            background_color:  C("#A9A9A9") 
             background_normal: ""
-            on_press: root.on_press_dia
+            on_press: root.on_press_mes()
         Button:   
             id: ano              
-            size_hint: None, 1   
+            size_hint: .2, 1   
             width:60  
-            text: root.ano     
-            color:  C("#001f4d") 
+            text: root.ano  
+            bold: True 
+            color:  C("#FFFFFF")   
+            background_color:  C("#A9A9A9") 
             background_normal: ""
         Label:
+            size_hint: .3, 1
             id: dataGregoriana
             italic: True                
             text: root.dataGregoriana  
