Adicionado Area de Calendário

--- a/infra/view/kv/anocalendario.kv
+++ b/infra/view/kv/anocalendario.kv
@@ -1,4 +1,4 @@
-<MesCalendario>:
+<AnoCalendario>:
     color:  C("#FFFFFF")   
     background_color:  C("#00BFFF") 
     background_normal: ""          
