--- a/infra/view/kv/areadata.kv
+++ b/infra/view/kv/areadata.kv
@@ -39,6 +39,8 @@
             color:  C("#FFFFFF")   
             background_color:  C("#A9A9A9") 
             background_normal: ""
+            on_press: root.on_press_ano()
+
         Label:
             size_hint: .3, 1
             id: dataGregoriana
