--- a/infra/view/area_titulo.kv
+++ b/infra/view/area_titulo.kv
@@ -1,7 +1,7 @@
 <AreaTitulo>:
     canvas:
         Color:            
-            rgb: C("#80b3ff")
+            rgb: C("#ffffff")
         Rectangle:
             size: root.size
             pos: root.pos         
@@ -11,7 +11,7 @@
         bold: True
         pos_hint: {"right":1, "top":1}
         text:root.titulo
-        color:  C("#FFFFFF")
+        color:  C("#3A8EED")
         font_height: 20
         ellipsis_options: {'color':(1,0.5,0.5,1),'underline':True}
 
