--- a/infra/view/tela_dekatrian.kv
+++ b/infra/view/tela_dekatrian.kv
@@ -4,9 +4,9 @@
 <TelaDekatrian>:    
     orientation: "vertical"   
     AreaMenu:  
-        size_hint: 1, .097       
+        size_hint: 1, .1      
     StackLayout:   
-        size_hint: 1, .97           
+        size_hint: 1, 1         
         orientation: "lr-tb"
         canvas:
             Color:            
@@ -14,6 +14,10 @@
             Rectangle:
                 size: self.size
                 pos: self.pos
+        Label:
+            size_hint: 1, .112
+            color: C("#3A8EED")            
+            text: ''
 
         Label:
             size_hint: 1, .2
