--- a/infra/view/tela_inicial.kv
+++ b/infra/view/tela_inicial.kv
@@ -1,9 +1,10 @@
 #:import C kivy.utils.get_color_from_hex
 
 <TelaInicial>:
-    orientation: "vertical"  
+    orientation: "vertical" 
+    
     AreaMenu:  
-        size_hint: 1, .1            
+        size_hint: 1, .1                     
     BoxLayout:  
         padding: 5            
         orientation: "vertical" 
@@ -13,14 +14,14 @@
                 pos: self.pos
                 source: root.background
         AreaTitulo:  
-            size_hint: 1, .07     
+            size_hint: 1, .08     
         AreaData: 
             size_hint: 1, .08
         BoxLayout:   
             size_hint: 1, .32  
             canvas:
                 Color:            
-                    rgb: C("#3385ff")
+                    rgb: C("#72aff5")
                 Rectangle:
                     size: self.size
                     pos: self.pos  
