Correção nas cores

--- a/infra/view/ano_calendario.kv
+++ b/infra/view/ano_calendario.kv
@@ -1,5 +1,5 @@
 <AnoCalendario>:
     color:  C("#FFFFFF")   
-    background_color:  C("#87b5ea") 
+    background_color:  C("#4A93E7") 
     background_normal: ""          
     on_press: root.on_press()
