--- a/infra/view/area_data.kv
+++ b/infra/view/area_data.kv
@@ -1,9 +1,10 @@
 <AreaData>:  
     orientation: "vertical"   
-    padding: 5        
+    padding: 7        
     canvas:
+        
         Color:            
-            rgb: C("#80b3ff")
+            rgb: C("#1374E4")
         Rectangle:
             size: root.size
             pos: root.pos                 
@@ -16,7 +17,7 @@
             text: root.dia
             bold: True 
             color:  C("#FFFFFF")   
-            background_color:  C("#A9A9A9") 
+            background_color:  C("#044590") 
             background_normal: ""
             on_press: root.on_press_dia()
 
@@ -27,7 +28,7 @@
             text: root.mes     
             bold: True 
             color:  C("#FFFFFF")   
-            background_color:  C("#A9A9A9") 
+            background_color:  C("#044590") 
             background_normal: ""
             on_press: root.on_press_mes()
         Button:   
@@ -37,7 +38,7 @@
             text: root.ano  
             bold: True 
             color:  C("#FFFFFF")   
-            background_color:  C("#A9A9A9") 
+            background_color:  C("#044590") 
             background_normal: ""
             on_press: root.on_press_ano()
 
