--- a/infra/view/area_titulo.kv
+++ b/infra/view/area_titulo.kv
@@ -1,7 +1,7 @@
 <AreaTitulo>:
     canvas:
         Color:            
-            rgb: C("#ffffff")
+            rgb: C("#4A93E7")
         Rectangle:
             size: root.size
             pos: root.pos         
@@ -11,8 +11,8 @@
         bold: True
         pos_hint: {"right":1, "top":1}
         text:root.titulo
-        color:  C("#3A8EED")
-        font_height: 20
+        color:  C("#FFFFFF")
+        font_height: 100        
         ellipsis_options: {'color':(1,0.5,0.5,1),'underline':True}
 
         
