--- a/infra/view/dia_calendario.kv
+++ b/infra/view/dia_calendario.kv
@@ -1,5 +1,5 @@
 <DiaCalendario>:
-    color:  C("#001f4d")    
+    color:  C("#FFFFFF")    
     background_normal: ""       
     size_hint: .1428, .2
     on_press: root.on_press()
