--- a/infra/view/tela_inicial.kv
+++ b/infra/view/tela_inicial.kv
@@ -12,7 +12,7 @@
             Rectangle:
                 size: self.size
                 pos: self.pos
-                source: root.background
+                #source: root.background
         AreaTitulo:  
             size_hint: 1, .08     
         AreaData: 
@@ -21,7 +21,7 @@
             size_hint: 1, .32  
             canvas:
                 Color:            
-                    rgb: C("#72aff5")
+                    rgb: C("#4A93E7")
                 Rectangle:
                     size: self.size
                     pos: self.pos  
