--- a/infra/view/mes_calendario.kv
+++ b/infra/view/mes_calendario.kv
@@ -1,6 +1,6 @@
 <MesCalendario>:
     color:  C("#FFFFFF")   
-    background_color:  C("#95C6FE") 
+    background_color:  C("#4A93E7") 
     background_normal: ""          
     on_press: root.on_press()
     
