Adicionada Nova Animação

--- a/infra/view/tela_desenvolvimento.kv
+++ b/infra/view/tela_desenvolvimento.kv
@@ -1,26 +1,27 @@
 #coding: utf-8
 #:import C kivy.utils.get_color_from_hex
 
-<TelaDesenvolvimento>:    
-    orientation: "vertical"   
-    AreaMenu:  
-        size_hint: 1, .1         
-    StackLayout:   
-        size_hint: 1, 1           
-        orientation: "lr-tb"
-        canvas:
-            Color:            
-                rgb: C("#ffffff")
-            Rectangle:
-                size: self.size
-                pos: self.pos
-        Label:
-            size_hint: 1, .28
-            color: C("#3A8EED")            
-            text: ''
-            
-        Label:
-            size_hint: 1, .2
-            color: C("#3A8EED")            
-            text: root.texto
-            markup: True
+<TelaDesenvolvimento>:   
+    BoxLayout:
+        orientation: "vertical"   
+        AreaMenu:  
+            size_hint: 1, .1         
+        StackLayout:   
+            size_hint: 1, 1           
+            orientation: "lr-tb"
+            canvas:
+                Color:            
+                    rgb: C("#ffffff")
+                Rectangle:
+                    size: self.size
+                    pos: self.pos
+            Label:
+                size_hint: 1, .28
+                color: C("#3A8EED")            
+                text: ''
+                
+            Label:
+                size_hint: 1, .2
+                color: C("#3A8EED")            
+                text: root.texto
+                markup: True
