Mudança na tela menu para se tornar responsiva

--- a/infra/view/area_menu.kv
+++ b/infra/view/area_menu.kv
@@ -10,7 +10,7 @@
             title: root.aplicacao.title
             on_release: root.on_press_menu()
             app_icon:  root.img_logo
-            app_icon_width: 50
+            app_icon_width: root.width * 0.18
 
         ActionButton:
             text: 'Sair'
