Alterado Bug do novo layout

--- a/infra/view/area_menu.kv
+++ b/infra/view/area_menu.kv
@@ -7,12 +7,12 @@
     ActionView:
 
         ActionPrevious:
-            title: root.aplicacao.title
+            title: root.dataAtual
             on_release: root.on_press_menu()
             app_icon:  root.img_logo
             app_icon_width: root.width * 0.18
 
-        ActionButton:
-            text: 'Sair'
-            on_release: root.confirmacao()
+        #ActionButton:
+        #    text: 'Sair'
+        #    on_release: root.confirmacao()
             
